# LAB_TO_Alvarez_Choque

./: README.md  cambio.cpp
Interfaz Paises/paises/: CMakeLists.txt  countryinfo.cpp  countryinfo.h  infoPais.pro  main.cpp
LAB 6/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp
